--- a/WebServiceNCF/WebServiceNCF/Web.config
+++ b/WebServiceNCF/WebServiceNCF/Web.config
@@ -4,6 +4,19 @@
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
   </appSettings>
+
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebApiNCF-20180221043630.mdf;Initial Catalog=aspnet-WebApiNCF-20180221043630;Integrated Security=True" providerName="System.Data.SqlClient" />
+
+    <!--DB TEST
+    <add name="NCFConnectionString" connectionString="Data Source=172.16.0.42;Initial Catalog=N4EDI;Persist Security Info=True;User ID=N4edi;Password=N4edi.2014;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+     -->
+
+    <!--DB PRODUCCION-->
+    <add name="NCFConnectionString" connectionString="Data Source=172.16.0.70;Initial Catalog=HITNCF;Persist Security Info=True;User ID=usr_ncf;Password=abcd.1234;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+
+  </connectionStrings>
+   
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
