--- a/WebServiceNCF/WebServiceNCF/WebServiceNCF.csproj
+++ b/WebServiceNCF/WebServiceNCF/WebServiceNCF.csproj
@@ -114,6 +114,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Service References\Application Insights\ConnectedService.json" />
+    <None Include="Properties\PublishProfiles\je.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
