--- a/WebServiceNCF/WebServiceNCF/WebServiceNCF.csproj
+++ b/WebServiceNCF/WebServiceNCF/WebServiceNCF.csproj
@@ -92,6 +92,8 @@
   <ItemGroup>
     <Content Include="scripts\ai.0.22.9-build00167.js" />
     <Content Include="scripts\ai.0.22.9-build00167.min.js" />
+    <Content Include="t-sql\SQLQueryWebApiNCF.sql" />
+    <Content Include="t-sql\SQLQueryWebApiNCFStoreProcedure.sql" />
     <Content Include="Web.config" />
     <Content Include="WebServiceNCF.asmx" />
   </ItemGroup>
