--- a/WebServiceNCF/WebServiceNCF/Web.config
+++ b/WebServiceNCF/WebServiceNCF/Web.config
@@ -13,7 +13,7 @@
      -->
 
     <!--DB PRODUCCION-->
-    <add name="NCFConnectionString" connectionString="Data Source=172.16.0.70;Initial Catalog=HITNCF;Persist Security Info=True;User ID=usr_ncf;Password=abcd.1234;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <add name="NCFConnectionString" connectionString="Data Source=172.16.0.70;Initial Catalog=HITNCF_TEST;Persist Security Info=True;User ID=usr_ncf;Password=abcd.1234;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
 
   </connectionStrings>
    
